@@ -1,3 +1,9 @@
+2000-08-31  Hugo Tyson  <hmt@cygnus.co.uk>
+
+	* tests/snmpping.c (net_test): Add use of network realtime test
+	harness - if available.  One example is provided for the EBSA285
+	in "devs/eth/arm/ebsa285/VERSION/tests/test_net_realtime.h"
+
 2000-08-25  Hugo Tyson  <hmt@cygnus.co.uk>
 
 	* src/mibgroup/mibII/dot3.c (var_dot3StatsTable): A little further
