@@ -1,3 +1,9 @@
+2000-08-31  Hugo Tyson  <hmt@cygnus.co.uk>
+
+	* tests/tcp_echo.c: Change the priorities of the main and loading
+	threads to accommodate the network having helper threads around at
+	adjacent priorities to its main thread prio.
+
 2000-08-24  Hugo Tyson  <hmt@cygnus.co.uk>
 
 	* src/sys/net/if.c (ifioctl): Support the two new ioctl() keys; at
